[package]
name = "bazaar_realm_client"
version = "0.1.0"
authors = ["Tyler Hallada <tyler@hallada.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cbindgen = "0.14.4"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bincode = "1.3"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
http-api-problem  = "0.17"
ipnetwork = "0.17"
mockito = "0.26.0"
reqwest = { version = "0.10", features = ["blocking", "json", "gzip"] }
log = "0.4"
simple-logging = "2.0"
dirs = "3.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.1"

[lib]
name = "BazaarRealmClient"
crate-type = ["cdylib"]